# rule-30-solver

./: pyproject.toml
base/src/: config.rs
miner/src/: main.rs
rule_30/: cell.py  counter.py  models.py  visualize.py  wandb_config.py
rule_30/miner/: __init__.py  compute.py  miner.py
rule_30/validator/: __init__.py  config.py  validator.py
validator/src/: main.rs
